Initial creation of Django and Vite projects.

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,9 @@
 # MacOS files
 .DS_Store
+
+# Django and Python
+scrub_hub_project/**/__pycache__/
+scrub_hub_project/*.sqlite3
+
+# vite and Node
+scrub_hub_vite/node_modules/
