--- a/scrub_hub_vite/package.json
+++ b/scrub_hub_vite/package.json
@@ -13,6 +13,7 @@
 		"axios": "^1.6.8",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-icons": "^5.1.0",
 		"react-use-websocket": "^4.8.1",
 		"universal-cookie": "^7.1.4"
 	},
